--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,8 @@
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "react-xarrows": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "16.11.6",
