added view count and option to like the page

--- a/app-api/package.json
+++ b/app-api/package.json
@@ -45,7 +45,8 @@
     "sqlite": "^4.0.23",
     "sqlite3": "^5.0.2",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.38"
+    "typeorm": "^0.2.38",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
