--- a/app-api/package.json
+++ b/app-api/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "3": "^2.1.0",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
@@ -34,6 +35,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
+    "js-yaml": "^4.1.0",
     "mysql2": "^2.3.2",
     "nodemailer": "^6.7.0",
     "passport": "^0.4.1",
@@ -54,6 +56,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/js-yaml": "^4.0.5",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
