add mysql config, bcrypt, cast timestamp as date, loading for signup

--- a/app-api/.env.example
+++ b/app-api/.env.example
@@ -3,3 +3,7 @@ EMAIL_USER=your-email
 EMAIL_PASSWORD=your-email-or-password
 PORT=80
 JWT_SECRET=your-jwt-secret-token
+HOST=localhost
+USER=root
+PASSWORD=root
+DATABASE=test
