--- a/app-api/package.json
+++ b/app-api/package.json
@@ -32,11 +32,12 @@
     "@nestjs/typeorm": "^8.0.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/nodemailer": "^6.4.4",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "js-yaml": "^4.1.0",
-    "mysql2": "^2.3.2",
+    "mysql2": "^2.3.3",
     "nodemailer": "^6.7.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -54,6 +55,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/js-yaml": "^4.0.5",
