--- a/binarytreesviz.conf
+++ b/binarytreesviz.conf
@@ -27,6 +27,16 @@ server {
         add_header Cache-Control "public, max-age=3600";
     }
 
+    location /api {
+        # reverse proxy for nest server
+        proxy_pass http://localhost:5000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
     listen [::]:443 ssl ipv6only=on;
     listen 443 ssl default_server;
 
@@ -39,6 +49,7 @@ server {
 
 }
 
+
 server {
     if ($host = www.binarytreesviz.com) {
         return 301 https://$host$request_uri;
@@ -48,8 +59,8 @@ server {
         return 301 https://$host$request_uri;
     }
 
-    listen 80 ;
-    listen [::]:80 ;
+    listen 80;
+    listen [::]:80;
     server_name www.binarytreesviz.com binarytreesviz.com;
     return 301 https://$host$request_uri;
 }
