update config & cors

--- a/app-api/.env.example
+++ b/app-api/.env.example
@@ -1,4 +1,5 @@
 ROOT_URL=http://localhost:3000
+CORS_WHITELIST=binarytreesviz.com,www.binarytreesviz.com
 EMAIL_USER=your-email
 EMAIL_PASSWORD=your-email-or-password
 PORT=80
