--- a/binarytreesviz.conf
+++ b/binarytreesviz.conf
@@ -27,16 +27,6 @@ server {
         add_header Cache-Control "public, max-age=3600";
     }
 
-    location /api {
-        # reverse proxy for nest server
-        proxy_pass http://localhost:5000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-
     listen [::]:443 ssl ipv6only=on;
     listen 443 ssl default_server;
 
@@ -49,15 +39,40 @@ server {
 
 }
 
+server {
+    server_name api.binarytreesviz.com;
+
+    location / {
+        # reverse proxy for nest server
+        proxy_pass http://localhost:5000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    listen 443 ssl;
+    listen [::]:443 ssl;
+
+    ssl_certificate /etc/letsencrypt/live/binarytreesviz.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/binarytreesviz.com/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+}
 
 server {
     if ($host = www.binarytreesviz.com) {
+        return 301 https://$host$request_uri;
+    }
+    
+    if ($host = api.binarytreesviz.com) {
         return 301 https://$host$request_uri;
     }
 
     if ($host = binarytreesviz.com) {
         return 301 https://$host$request_uri;
     }
+
 
     listen 80;
     listen [::]:80;
