make tree levels depend on screen width

--- a/binarytreesviz.conf
+++ b/binarytreesviz.conf
@@ -1,9 +1,10 @@
-# Serve nextJS app from a port through NGINX reverse proxy (HTTPS)
-# Path: /etc/nginx/sites-available/default
+# Serve nextJS + nestjs app from a port through NGINX reverse proxy (HTTPS)
+# Path: /etc/nginx/sites-available/binarytreesviz
 # Default server configuration for HTTPS
-# Inspired from: https://gist.github.com/ZaHuPro/2ecdb934a7362e979e3aa5a92b181153
+# File modified from version at https://gist.github.com/ZaHuPro/2ecdb934a7362e979e3aa5a92b181153
 
 server {
+    # Frontend
     server_name www.binarytreesviz.com binarytreesviz.com;
 
     # Serve any static assets with NGINX
@@ -40,6 +41,7 @@ server {
 }
 
 server {
+    # Backend
     server_name api.binarytreesviz.com;
 
     location / {
