update email service

--- a/app-api/.env.example
+++ b/app-api/.env.example
@@ -1,7 +1,8 @@
 ROOT_URL=http://localhost:3000
 CORS_WHITELIST=binarytreesviz.com,www.binarytreesviz.com
-EMAIL_USER=your-email
-EMAIL_PASSWORD=your-email-or-password
+EMAIL_HOST=mail.hostname.com
+EMAIL_USER=your-email@email.com
+EMAIL_PASSWORD=your-token-or-password
 PORT=80
 JWT_SECRET=your-jwt-secret-token
 HOST=localhost
