--- a/app-api/package.json
+++ b/app-api/package.json
@@ -36,6 +36,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
+    "handlebars": "^4.7.7",
     "js-yaml": "^4.1.0",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.0",
